--- a/index.html
+++ b/index.html
@@ -3,12 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>jheny</title>
-    <link rel="stylesheet" href="style.css">
+    <!--Fonts Google-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--Fim-->
+    <title>Agência_Jhenyfer</title>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
 <body>
-   <h1 class="Titulo1">Jheny</h1>
-   <p></p>
-   <a href="https://google.com" class="button">ir para curriculo</a>
+
+  <header>
+    <div class="interface">
+       <div class="logo">
+        <a href="">
+            <img src="src/Untitled_logo_1_free-file (1).jpg" alt="Logo da Agência_Jhenyfer">
+        </a>
+       </div><!--Logotipo-->
+       <nav class="menu_Desktop">
+            <ul>
+                <li><a href="">Inicio</a></li>
+                <li><a href="">Especialidades</a></li>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Projetos</a></li>
+            </ul>
+       </nav>
+
+       <div class="jheny-contato">
+            <a href="">
+                <button>Contato</button>
+            </a>
+       </div><!--jheny-contato-->
+    </div><!--Interface-->
+  </header>
+
+  <main>
+    <section class="Topo-do-site">
+        <div class="interface">
+            <div class="flex">
+                <div class="txt-topo-site">
+                    <h1>TRANSFORMANDO IDEIAS EM REALIDADE<span>.</span></h1>
+                    <p>A criatividade é algo que existe dentro da nossa mente e pode ser canalizada ou não para uma ação. Já a inovação está totalmente relacionada à ação. É quando a ideia é colocada em prática e passa a impactar a vida das pessoas. Ou seja, a criatividade é o primeiro passo para a inovação.</p>
+                    <div class="jheny-contato">
+                        <a href="">
+                            <button>Entre em Contato</button>
+                        </a>
+                   </div><!--jheny-contato-->
+                </div><!--txt-topo-site-->
+
+                <div class="img-topo-site">
+                    <img src="src/WhatsApp Image 2024-04-15 at 20.38.31 (1).jpeg.png" width="470" height="500" alt="">
+                </div><!--img-topo-site-->
+            </div><!--flex-->
+        </div><!--Interface-->
+    </section><!--Topo-do-site-->
+  </main>
+
 </body>
 </html>
